cleaning up disable time display toggling for now

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<em class="loaded"></em>
 			<strong class="played"></strong>
 		</span>
-		<a href="#" class="time remaining">00:00</a>
+		<span class="time remaining">00:00</span>
 		<a href="#" class="popout"></a>
 		
 		<audio>
