--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<strong class="played"></strong>
 		</span>
 		<span class="time remaining">00:00</span>
-		<a href="#" class="popout"></a>
+		<a href="/popout.html" rel="episode_audio" class="popout"></a>
 		
 		<audio>
 			<source src="/audio/superhero-009.mp3" type="audio/mpeg" />
@@ -32,6 +32,7 @@
 
 	<script src="/javascripts/jquery-1.4.4.min.js"></script>
 	<script src="/javascripts/jquery-ui-1.8.7.custom.min.js"></script>
+	<script src="/javascripts/jquery-popupwindow.js"></script>
 	<script src="/javascripts/5by5.js"></script>
   
 </body>
