don't preload audio

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<span class="time remaining">00:00</span>
 		<a href="/popout.html" rel="episode_audio" class="popout"></a>
 		
-		<audio>
+		<audio preload="none">
 			<source src="/audio/superhero-009.mp3" type="audio/mpeg" />
 		</audio>
 			
